WIP adding pymc3 linear models

--- a/10_DataEngineering.ipynb
+++ b/10_DataEngineering.ipynb
@@ -7,7 +7,7 @@
     "<div style=float:right><img src=\"assets/img/appliedai-logo.png\" width=100 style=\"margin: 0px 20px\"></img></div>\n",
     "\n",
     "\n",
-    "##### Jonathan Sedar Personal project\n",
+    "##### Jonathan Sedar Personal Project\n",
     "## PyMC3 vs PyStan Comparison\n",
     "_Spring 2016_\n",
     "\n",
@@ -56,7 +56,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {
     "collapsed": false
    },
