WIP updating model eval (PPC etc)

--- a/00_BasicInstallTests.ipynb
+++ b/00_BasicInstallTests.ipynb
@@ -22,9 +22,16 @@
     "\n",
     "\n",
     "+ [Setup](#Setup)\n",
-    "    + [Prepare Data](#Prepare-Data)\n",
     "    + [Local Functions](#Local-Functions)\n",
-    "\n"
+    "    + [Prepare Data](#Prepare-Data)\n",
+    "\n",
+    "\n",
+    "+ [Create OLS using statsmodels for reference](#Create-OLS-using-statsmodels-for-reference)\n",
+    "\n",
+    "\n",
+    "+ [Create OLS using PyMC3](#Create-OLS-using-PyMC3)\n",
+    "\n",
+    "+ []()"
    ]
   },
   {
@@ -272,6 +279,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "---\n",
+    "\n",
     "---"
    ]
   },
