added demo poisson regression using both pymc3 and pystan

--- a/30_BasicLinearRegression.ipynb
+++ b/30_BasicLinearRegression.ipynb
@@ -78,6 +78,7 @@
    "outputs": [],
    "source": [
     "# general packages\n",
+    "import sys\n",
     "import sqlite3\n",
     "from convenience_functions import *\n",
     "from ipywidgets import interactive, fixed\n",
@@ -104,6 +105,28 @@
     "pd.set_option('display.mpl_style', 'default')\n",
     "plt.rcParams['figure.figsize'] = 12, 4\n",
     "np.random.seed(0)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "##### Versions"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "print('Python: {}'.format(sys.version))\n",
+    "print('Recursion limit {}'.format(sys.getrecursionlimit()))\n",
+    "print('theano: {}'.format(thno.__version__))\n",
+    "print('PyMC3: {}'.format(pm.__version__))\n",
+    "print('PyStan: {}'.format(pystan.__version__))"
    ]
   },
   {
