WIP hierarchical modelling
Also created a poisson regression analysis for Ian

--- a/31_BasicModelEvaluation.ipynb
+++ b/31_BasicModelEvaluation.ipynb
@@ -119,88 +119,7 @@
    },
    "outputs": [],
    "source": [
-    "# def strip_derived_rvs(rvs):\n",
-    "#     '''Convenience fn: remove PyMC3-generated RVs from a list'''\n",
-    "#     ret_rvs = []\n",
-    "#     for rv in rvs:\n",
-    "#         if not (re.search('_log',rv.name) or re.search('_interval',rv.name)):\n",
-    "#             ret_rvs.append(rv)     \n",
-    "#     return ret_rvs\n",
-    "\n",
-    "\n",
-    "# def trace_median(x):\n",
-    "#     return pd.Series(np.median(x,0), name='median')\n",
-    "\n",
-    "\n",
-    "# def plot_traces_pymc(trcs, varnames=None):\n",
-    "#     ''' Convenience fn: plot traces with overlaid means and values '''\n",
-    "\n",
-    "#     nrows = len(trcs.varnames)\n",
-    "#     if varnames is not None:\n",
-    "#         nrows = len(varnames)\n",
-    "#     ax = pm.traceplot(trcs, varnames=varnames, figsize=(12,nrows*1.4)\n",
-    "#         ,lines={k: v['mean'] for k, v in \n",
-    "#             pm.df_summary(trcs,varnames=varnames).iterrows()})\n",
-    "\n",
-    "#     for i, mn in enumerate(pm.df_summary(trcs, varnames=varnames)['mean']):\n",
-    "#         ax[i,0].annotate('{:.2f}'.format(mn), xy=(mn,0), xycoords='data'\n",
-    "#                     ,xytext=(5,10), textcoords='offset points', rotation=90\n",
-    "#                     ,va='bottom', fontsize='large', color='#AA0022')    \n",
-    "\n",
-    "        \n",
-    "# def plot_stan_trc(dftrc):\n",
-    "#     \"\"\"\n",
-    "#        Create simple plots of parameter distributions and traces from \n",
-    "#        output of pystan sampling. Emulates pymc traceplots.\n",
-    "#     \"\"\"\n",
-    "\n",
-    "#     fig, ax2d = plt.subplots(nrows=dftrc.shape[1], ncols=2, figsize=(14, 1.8*dftrc.shape[1]),\n",
-    "#                                 facecolor='0.99', edgecolor='k')\n",
-    "#     fig.suptitle('Distributions and traceplots for {} samples'.format(\n",
-    "#                                 dftrc.shape[0]),fontsize=14)\n",
-    "#     fig.subplots_adjust(wspace=0.2, hspace=0.5)\n",
-    "\n",
-    "#     k = 0\n",
-    "    \n",
-    "#     # create density and traceplot, per parameter coeff\n",
-    "#     for i, (ax1d, col) in enumerate(zip(ax2d, dftrc.columns)):\n",
-    "\n",
-    "#         samples = dftrc[col].values\n",
-    "#         scale = (10**np.round(np.log10(samples.max() - samples.min()))) / 20\n",
-    "#         kde = KernelDensity(bandwidth=scale).fit(samples.reshape(-1, 1))\n",
-    "#         x = np.linspace(samples.min(), samples.max(), 100).reshape(-1, 1)\n",
-    "#         y = np.exp(kde.score_samples(x))\n",
-    "#         clr = sns.color_palette()[0]\n",
-    "\n",
-    "#         # density plot\n",
-    "#         ax1d[0].plot(x, y, color=clr, linewidth=1.4)\n",
-    "#         ax1d[0].vlines(np.percentile(samples, [2.5, 97.5]), ymin=0, ymax=y.max()*1.1,\n",
-    "#                        alpha=1, linestyles='dotted', colors=clr, linewidth=1.2)\n",
-    "#         mn = np.mean(samples)\n",
-    "#         ax1d[0].vlines(mn, ymin=0, ymax=y.max()*1.1,\n",
-    "#                        alpha=1, colors='r', linewidth=1.2)\n",
-    "#         ax1d[0].annotate('{:.2f}'.format(mn), xy=(mn,0), xycoords='data'\n",
-    "#                     ,xytext=(5,10), textcoords='offset points', rotation=90\n",
-    "#                     ,va='bottom', fontsize='large', color='#AA0022')    \n",
-    "#         ax1d[0].set_title('{}'.format(col), fontdict={'fontsize':10})\n",
-    "\n",
-    "\n",
-    "#         # traceplot\n",
-    "#         ax1d[1].plot(np.arange(len(samples)),samples, alpha=0.2, color=clr, linestyle='solid'\n",
-    "#                               ,marker=',', markerfacecolor=clr, markersize=10)\n",
-    "#         ax1d[1].hlines(np.percentile(samples,[2.5, 97.5]), xmin=0, xmax=len(samples),\n",
-    "#                        alpha=1, linestyles='dotted', colors=clr)\n",
-    "#         ax1d[1].hlines(np.mean(samples), xmin=0, xmax=len(samples), alpha=1, colors='r')\n",
-    "\n",
-    "#         k += 1\n",
-    "                \n",
-    "#         ax1d[0].set_title('{}'.format(col), fontdict={'fontsize':14})#,'fontweight':'bold'})\n",
-    "#         #ax1d[0].legend(loc='best', shadow=True)\n",
-    "        \n",
-    "#         _ = [ax1d[j].axes.grid(True, linestyle='-', color='lightgrey') for j in range(2)]\n",
-    "            \n",
-    "#     plt.subplots_adjust(top=0.94)\n",
-    "#     plt.show()"
+    "# none"
    ]
   },
   {
