--- a/40_HierarchicalLinearRegression.ipynb
+++ b/40_HierarchicalLinearRegression.ipynb
@@ -221,6 +221,7 @@
     "    \n",
     "    return dfsm\n",
     "\n",
+    "\n",
     "def custom_forestplot(df, sg, ylabel='mfr', size=8, aspect=0.8, facetby=None):\n",
     "    ''' Conv fn: plot features from pm.df_summary using seaborn\n",
     "        Facet on sets of forests for comparison '''\n",
@@ -2880,7 +2881,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 118,
+   "execution_count": 127,
    "metadata": {
     "collapsed": true
    },
@@ -2927,7 +2928,9 @@
     "        }\n",
     "\n",
     "        for (mfr in 1:n_mfr) {\n",
-    "            b0_mfr[mfr] ~ normal(b0_parent[parent_enc], mfr_sd);        // n_mfr x 1\n",
+    "            for (n in 1:N){\n",
+    "                b0_mfr[mfr] ~ normal(b0_parent[parent_enc[n]], mfr_sd);        // n_mfr x 1\n",
+    "            }\n",
     "        }      \n",
     "\n",
     "        sigma ~ cauchy(0, 10);\n",
@@ -2939,7 +2942,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 119,
+   "execution_count": 128,
    "metadata": {
     "collapsed": true
    },
@@ -2959,7 +2962,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 120,
+   "execution_count": 129,
    "metadata": {
     "collapsed": false
    },
@@ -3000,7 +3003,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 121,
+   "execution_count": 130,
    "metadata": {
     "collapsed": false,
     "scrolled": true
@@ -3010,83 +3013,83 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Inference for Stan model: mdl_hier_stan_58eaa6f434a9928c50925f4e99409347.\n",
+      "Inference for Stan model: mdl_hier_stan_385e3ad5d74c18f0580e471bf4169a17.\n",
       "4 chains, each with iter=200; warmup=150; thin=1; \n",
       "post-warmup draws per chain=50, total post-warmup draws=200.\n",
       "\n",
       "                mean se_mean     sd   2.5%    25%    50%    75%  97.5%  n_eff   Rhat\n",
-      "beta[0]         0.59    0.17   0.25   0.19   0.36   0.67   0.79   0.81      2    nan\n",
-      "beta[1]         0.11     0.7   0.99  -1.48  -0.79   0.46   0.94   1.01      2    nan\n",
-      "beta[2]        -0.57    0.54   0.77  -1.89  -1.14  -0.16  -0.07  -0.04      2    nan\n",
-      "beta[3]         0.45    0.87   1.23  -0.91  -0.75   0.36   1.68    2.0      2    nan\n",
-      "beta[4]         0.38     1.0   1.41  -1.77  -0.94   0.69   1.64   1.92      2    nan\n",
-      "beta[5]        -0.93    0.44   0.62  -1.57  -1.41  -1.12  -0.41   0.09      2    nan\n",
-      "beta[6]         0.02    0.55   0.78  -1.05   -0.7   0.02   0.74   1.09      2    nan\n",
-      "sigma           7.18    3.29   4.66   2.12   2.66    6.6   11.8  13.46      2 316.38\n",
-      "parent_mu      -0.47    0.91   1.29   -1.7  -1.53  -0.92   0.67   1.63      2    nan\n",
-      "parent_sd       1.16    0.69   0.98   0.27   0.49   0.77   1.91   2.81      2    nan\n",
-      "b0_parent[0]   -0.08    0.23   0.32  -0.65  -0.28   0.07   0.15   0.18      2  19.52\n",
-      "b0_parent[1]    0.08    0.05   0.07 2.7e-3 9.4e-3   0.07   0.15   0.18      2  63.91\n",
-      "b0_parent[2]    0.08    0.05   0.07 3.3e-3 9.5e-3   0.07   0.15   0.18      2  62.72\n",
-      "b0_parent[3]    0.09    0.05   0.07-4.3e-3 9.4e-3   0.09   0.15   0.18      2  10.83\n",
-      "b0_parent[4]    0.08    0.05   0.07 2.9e-3 9.4e-3   0.07   0.15   0.18      2  37.68\n",
-      "b0_parent[5]    0.08    0.05   0.07 5.5e-3 9.3e-3   0.07   0.15   0.18      2    nan\n",
-      "b0_parent[6]    0.08    0.05   0.08-2.0e-3 8.7e-3   0.07   0.15   0.18      2  60.93\n",
-      "b0_parent[7]    0.11    0.04   0.06 9.1e-3   0.05   0.12   0.16   0.18      2  10.66\n",
-      "b0_parent[8]    0.06    0.07    0.1  -0.11 9.1e-3   0.08   0.15   0.18      2   7.21\n",
-      "b0_parent[9]    0.08    0.05   0.07 9.1e-3 9.6e-3   0.07   0.15   0.18      2  30.31\n",
-      "b0_parent[10]   0.18     0.1   0.15 9.1e-3   0.06   0.15   0.24   0.44      2   8.12\n",
-      "b0_parent[11]   0.24    0.16   0.23   0.03   0.08   0.15   0.39   0.64      2  23.44\n",
-      "b0_parent[12]   0.08    0.05   0.07 8.4e-4 9.4e-3   0.07   0.15   0.18      2  31.81\n",
-      "b0_parent[13]   0.12    0.05   0.07 9.1e-3   0.05   0.12   0.18   0.19      2   6.81\n",
-      "b0_parent[14]  -0.16    0.33   0.47   -1.0  -0.44   0.07   0.15   0.18      2  19.26\n",
-      "b0_parent[15]   0.09    0.05   0.07 9.2e-3   0.01   0.08   0.15   0.18      2  43.14\n",
-      "b0_parent[16]   0.06    0.07    0.1  -0.07-8.1e-3   0.07   0.15   0.18      2  14.83\n",
-      "b0_parent[17]   0.08    0.05   0.07 9.2e-3   0.01   0.08   0.15   0.18      2  54.59\n",
-      "b0_parent[18]   0.03    0.11   0.16  -0.28 9.3e-3   0.08   0.15   0.18      2   4.03\n",
-      "b0_parent[19]   0.08    0.05   0.07 3.2e-3 9.5e-3   0.07   0.15   0.18      2   64.8\n",
-      "mfr_sd          0.03    0.03   0.04 8.0e-4 1.2e-3 1.9e-3   0.03   0.13      2    7.8\n",
-      "b0_mfr[0]        0.1    0.05   0.07  -0.02 9.4e-3   0.12   0.16   0.18      2   4.44\n",
-      "b0_mfr[1]       0.06    0.07    0.1  -0.12 9.2e-3   0.08   0.15   0.18      2    7.3\n",
-      "b0_mfr[2]        0.1    0.05   0.07  -0.02 9.4e-3   0.12   0.15   0.18      2   4.36\n",
-      "b0_mfr[3]       0.06    0.07    0.1   -0.1 9.2e-3   0.07   0.15   0.18      2   8.05\n",
-      "b0_mfr[4]       0.08    0.05   0.07 6.0e-3 9.5e-3   0.07   0.15   0.18      2  35.72\n",
-      "b0_mfr[5]       0.08    0.05   0.07 8.0e-3 9.2e-3   0.07   0.15   0.18      2    nan\n",
-      "b0_mfr[6]       0.07    0.06   0.09  -0.06 9.0e-3   0.07   0.15   0.18      2   9.43\n",
-      "b0_mfr[7]        0.1    0.05   0.07  -0.01 9.5e-3   0.12   0.16   0.18      2   4.85\n",
-      "b0_mfr[8]        0.1    0.05   0.07  -0.02 9.4e-3   0.12   0.16   0.18      2   4.16\n",
-      "b0_mfr[9]        0.1    0.05   0.07  -0.03 9.5e-3   0.12   0.16   0.18      2   4.07\n",
-      "b0_mfr[10]      0.08    0.05   0.07 4.5e-3 9.5e-3   0.07   0.15   0.18      2  49.99\n",
-      "b0_mfr[11]      0.06    0.07    0.1  -0.12 9.2e-3   0.08   0.15   0.18      2   7.51\n",
-      "b0_mfr[12]       0.1    0.05   0.07  -0.02 9.5e-3   0.12   0.17   0.18      2   4.72\n",
-      "b0_mfr[13]       0.1    0.05   0.07  -0.02 9.4e-3   0.12   0.16   0.18      2   4.81\n",
-      "b0_mfr[14]      0.07    0.06   0.08  -0.04 9.2e-3   0.07   0.15   0.18      2  12.98\n",
-      "b0_mfr[15]      0.07    0.06   0.09  -0.05 9.2e-3   0.07   0.15   0.18      2  10.38\n",
-      "b0_mfr[16]      0.09    0.05   0.07 1.0e-3 9.5e-3   0.09   0.15   0.18      2  12.41\n",
-      "b0_mfr[17]      0.07    0.06   0.08  -0.03 9.2e-3   0.07   0.15   0.18      2  15.11\n",
-      "b0_mfr[18]      0.07    0.06   0.08  -0.04 9.2e-3   0.07   0.15   0.18      2  12.95\n",
-      "b0_mfr[19]      0.06    0.07    0.1  -0.11 9.0e-3   0.08   0.15   0.18      2   7.71\n",
-      "b0_mfr[20]      0.09    0.05   0.07  -0.02 9.5e-3   0.11   0.15   0.18      2   4.96\n",
-      "b0_mfr[21]      0.09    0.05   0.07 1.1e-3 9.5e-3   0.08   0.15   0.18      2   14.3\n",
-      "b0_mfr[22]      0.06    0.07    0.1  -0.12 9.2e-3   0.08   0.15   0.18      2   7.51\n",
-      "b0_mfr[23]      0.06    0.07    0.1  -0.11 9.1e-3   0.08   0.15   0.18      2   6.66\n",
-      "b0_mfr[24]      0.06    0.07   0.09  -0.09 9.1e-3   0.08   0.15   0.18      2   7.49\n",
-      "b0_mfr[25]       0.1    0.05   0.07  -0.02 9.5e-3   0.12   0.15   0.18      2    4.6\n",
-      "b0_mfr[26]       0.1    0.05   0.07  -0.01 9.5e-3   0.12   0.16   0.18      2    5.3\n",
-      "b0_mfr[27]      0.07    0.06   0.08  -0.03 9.1e-3   0.07   0.15   0.18      2   18.4\n",
-      "b0_mfr[28]      0.08    0.05   0.08 2.2e-3 8.2e-3   0.07   0.15   0.18      2    nan\n",
-      "b0_mfr[29]      0.07    0.06   0.09  -0.05 9.2e-3   0.07   0.15   0.18      2  11.23\n",
-      "b0_mfr[30]      0.08    0.05   0.07 5.8e-3 9.5e-3   0.07   0.15   0.18      2  29.11\n",
-      "b0_mfr[31]       0.1    0.05   0.07  -0.01 9.5e-3   0.12   0.16   0.18      2   5.33\n",
-      "b0_mfr[32]       0.1    0.05   0.07  -0.02 9.4e-3   0.12   0.15   0.18      2   4.76\n",
-      "b0_mfr[33]       0.1    0.05   0.07  -0.02 9.5e-3   0.12   0.15   0.18      2   4.63\n",
-      "b0_mfr[34]      0.07    0.06   0.09  -0.07 9.2e-3   0.07   0.15   0.18      2   8.47\n",
-      "b0_mfr[35]      0.06    0.07    0.1  -0.12 9.2e-3   0.07   0.15   0.18      2   8.42\n",
-      "b0_mfr[36]      0.06    0.07    0.1  -0.12 9.1e-3   0.07   0.15   0.18      2   8.25\n",
-      "b0_mfr[37]      0.09    0.05   0.07-1.8e-3 9.5e-3   0.08   0.15   0.18      2  12.76\n",
-      "lp__           5.2e5   1.4e5  2.0e5  1.4e5  3.7e5  6.0e5  6.5e5  6.9e5      2  19.23\n",
+      "beta[0]         0.53    0.93   1.31  -0.81  -0.79   0.52   1.84   1.88      2    nan\n",
+      "beta[1]        -0.65    0.84   1.18  -1.84  -1.51  -1.03   0.29   1.32      2    nan\n",
+      "beta[2]        -1.07    0.49    0.7  -1.77  -1.68  -1.26  -0.42   0.03      2    nan\n",
+      "beta[3]         0.34    0.79   1.12  -1.32  -0.67   0.47   1.33   1.73      2    nan\n",
+      "beta[4]        -0.96    0.18   0.25  -1.25  -1.16   -1.0  -0.74  -0.57      2    nan\n",
+      "beta[5]        -0.08    0.67   0.94   -1.1  -0.78  -0.34   0.66   1.45      2    nan\n",
+      "beta[6]        -0.15     1.0   1.41  -1.84   -1.5  -0.26   1.23   1.76      2    nan\n",
+      "sigma           5.68    2.07   2.93   2.34   3.14   5.07   8.34  10.23      2 255.36\n",
+      "parent_mu       0.21    0.92   1.29  -1.82  -0.93   0.47   1.29    1.7      2    nan\n",
+      "parent_sd       3.36    2.22   3.14    0.2   0.25   3.06   6.53   7.08      2 811.87\n",
+      "b0_parent[0]    0.52    0.34   0.48   0.08   0.09   0.35   0.97    1.3      2  55.92\n",
+      "b0_parent[1]    0.02    0.05   0.07  -0.07  -0.05   0.03   0.09   0.09      2    nan\n",
+      "b0_parent[2]    0.02    0.05   0.07  -0.07  -0.05   0.03   0.09   0.09      2    nan\n",
+      "b0_parent[3]    0.02    0.05   0.07  -0.07  -0.05   0.03   0.09   0.09      2  68.04\n",
+      "b0_parent[4]    0.02    0.05   0.07  -0.07  -0.05   0.03   0.09   0.09      2    nan\n",
+      "b0_parent[5]    0.02    0.05   0.07  -0.07  -0.05   0.03   0.09   0.09      2  72.62\n",
+      "b0_parent[6]    0.02    0.05   0.07  -0.07  -0.05   0.03   0.09   0.09      2   74.7\n",
+      "b0_parent[7]    -0.2    0.28   0.39  -0.92  -0.51  -0.02   0.09   0.09      2  38.77\n",
+      "b0_parent[8]    0.02    0.05   0.07  -0.08  -0.05   0.03   0.09   0.09      2    nan\n",
+      "b0_parent[9]    0.03    0.05   0.07  -0.07  -0.04   0.05   0.09   0.09      2  28.81\n",
+      "b0_parent[10]   0.04    0.28    0.4  -0.59  -0.26   0.09   0.31   0.59      2  42.25\n",
+      "b0_parent[11]   0.19    0.17   0.24  -0.03   0.02   0.09   0.36   0.61      2  79.79\n",
+      "b0_parent[12]   0.02    0.05   0.07  -0.07  -0.05   0.03   0.09   0.09      2    nan\n",
+      "b0_parent[13]   0.05    0.12   0.18  -0.26  -0.08   0.09   0.16   0.27      2   26.7\n",
+      "b0_parent[14]  -0.23    0.26   0.36  -0.81  -0.57  -0.12   0.09   0.09      2  68.89\n",
+      "b0_parent[15]   0.06    0.06   0.08  -0.08 2.9e-3   0.09    0.1   0.17      2  12.78\n",
+      "b0_parent[16]  -0.06    0.12   0.16  -0.35  -0.21-2.1e-3   0.09   0.09      2  19.57\n",
+      "b0_parent[17]   0.05    0.03   0.04-7.4e-3   0.01   0.07   0.09   0.09      2  13.25\n",
+      "b0_parent[18]   0.02    0.05   0.07  -0.07  -0.04   0.03   0.09   0.09      2  72.77\n",
+      "b0_parent[19]   0.02    0.05   0.07  -0.07  -0.05   0.03   0.09   0.09      2    nan\n",
+      "mfr_sd          0.05    0.03   0.04 1.3e-3 3.0e-3   0.04   0.09   0.11      2  29.62\n",
+      "b0_mfr[0]       0.02    0.05   0.07  -0.07  -0.05   0.03   0.09   0.09      2    nan\n",
+      "b0_mfr[1]       0.02    0.05   0.07  -0.07  -0.04   0.03   0.09   0.09      2  53.23\n",
+      "b0_mfr[2]       0.02    0.05   0.07  -0.07  -0.04   0.03   0.09   0.09      2  59.28\n",
+      "b0_mfr[3]       0.02    0.05   0.07  -0.07  -0.05   0.03   0.09   0.09      2    nan\n",
+      "b0_mfr[4]       0.02    0.05   0.07  -0.07  -0.04   0.03   0.09   0.09      2    nan\n",
+      "b0_mfr[5]       0.02    0.05   0.07  -0.08  -0.05   0.03   0.09   0.09      2    nan\n",
+      "b0_mfr[6]       0.02    0.05   0.07  -0.07  -0.05   0.03   0.09   0.09      2    nan\n",
+      "b0_mfr[7]       0.02    0.05   0.07  -0.08  -0.05   0.03   0.09   0.09      2  54.45\n",
+      "b0_mfr[8]       0.02    0.05   0.07  -0.08  -0.05   0.03   0.09   0.09      2   54.2\n",
+      "b0_mfr[9]       0.02    0.05   0.07  -0.07  -0.05   0.03   0.09   0.09      2    nan\n",
+      "b0_mfr[10]      0.02    0.05   0.07  -0.07  -0.04   0.03   0.09   0.09      2  54.48\n",
+      "b0_mfr[11]      0.02    0.05   0.07  -0.07  -0.05   0.03   0.09   0.09      2    nan\n",
+      "b0_mfr[12]      0.02    0.05   0.07  -0.07  -0.04   0.03   0.09   0.09      2  51.48\n",
+      "b0_mfr[13]      0.02    0.05   0.07  -0.07  -0.05   0.03   0.09   0.09      2    nan\n",
+      "b0_mfr[14]      0.02    0.05   0.07  -0.07  -0.05   0.03   0.09   0.09      2    nan\n",
+      "b0_mfr[15]      0.02    0.05   0.07  -0.07  -0.05   0.03   0.09   0.09      2    nan\n",
+      "b0_mfr[16]      0.02    0.05   0.07  -0.07  -0.04   0.03   0.09   0.09      2  63.67\n",
+      "b0_mfr[17]      0.02    0.05   0.07  -0.07  -0.05   0.03   0.09   0.09      2    nan\n",
+      "b0_mfr[18]      0.02    0.05   0.07  -0.07  -0.05   0.03   0.09   0.09      2  74.24\n",
+      "b0_mfr[19]      0.02    0.05   0.07  -0.07  -0.05   0.03   0.09   0.09      2    nan\n",
+      "b0_mfr[20]      0.02    0.05   0.07  -0.07  -0.05   0.03   0.09   0.09      2    nan\n",
+      "b0_mfr[21]      0.02    0.05   0.07  -0.08  -0.05   0.03   0.09   0.09      2  71.71\n",
+      "b0_mfr[22]      0.02    0.05   0.07  -0.08  -0.05   0.03   0.09   0.09      2    nan\n",
+      "b0_mfr[23]      0.02    0.05   0.07  -0.08  -0.05   0.03   0.09   0.09      2  65.82\n",
+      "b0_mfr[24]      0.02    0.05   0.07  -0.08  -0.05   0.03   0.09   0.09      2    nan\n",
+      "b0_mfr[25]      0.02    0.05   0.07  -0.08  -0.05   0.03   0.09   0.09      2    nan\n",
+      "b0_mfr[26]      0.02    0.05   0.07  -0.07  -0.05   0.03   0.09   0.09      2    nan\n",
+      "b0_mfr[27]      0.02    0.05   0.07  -0.07  -0.05   0.03   0.09   0.09      2    nan\n",
+      "b0_mfr[28]      0.02    0.05   0.07  -0.07  -0.05   0.03   0.09   0.09      2  75.12\n",
+      "b0_mfr[29]      0.02    0.05   0.07  -0.07  -0.04   0.03   0.09   0.09      2  56.56\n",
+      "b0_mfr[30]      0.02    0.05   0.07  -0.07  -0.04   0.03   0.09   0.09      2  62.09\n",
+      "b0_mfr[31]      0.02    0.05   0.07  -0.08  -0.05   0.03   0.09   0.09      2  57.93\n",
+      "b0_mfr[32]      0.02    0.05   0.07  -0.07  -0.05   0.03   0.09   0.09      2    nan\n",
+      "b0_mfr[33]      0.02    0.05   0.07  -0.07  -0.05   0.03   0.09   0.09      2    nan\n",
+      "b0_mfr[34]      0.02    0.05   0.07  -0.07  -0.05   0.03   0.09   0.09      2    nan\n",
+      "b0_mfr[35]      0.02    0.05   0.07  -0.08  -0.05   0.03   0.09   0.09      2    nan\n",
+      "b0_mfr[36]      0.02    0.05   0.07  -0.07  -0.05   0.03   0.09   0.09      2    nan\n",
+      "b0_mfr[37]      0.02    0.05   0.07  -0.06  -0.04   0.03   0.09   0.09      2    nan\n",
+      "lp__           3.8e5   1.4e5  2.0e5  1.6e5  1.8e5  3.3e5  5.7e5  6.4e5      2  29.79\n",
       "\n",
-      "Samples were drawn using NUTS(diag_e) at Mon May  2 20:26:54 2016.\n",
+      "Samples were drawn using NUTS(diag_e) at Mon May  2 21:41:03 2016.\n",
       "For each parameter, n_eff is a crude measure of effective sample size,\n",
       "and Rhat is the potential scale reduction factor on split chains (at \n",
       "convergence, Rhat=1).\n"
