--- a/40_HierarchicalLinearRegression.ipynb
+++ b/40_HierarchicalLinearRegression.ipynb
@@ -2881,7 +2881,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 127,
+   "execution_count": 150,
    "metadata": {
     "collapsed": true
    },
@@ -2902,6 +2902,8 @@
     "        \n",
     "        int<lower=0> n_mfr;                     // count of mfr index levels\n",
     "        int<lower=1, upper=n_mfr> mfr_enc[N];   // mfr index encoding          \n",
+    "        \n",
+    "        int<lower=1, upper=n_mfr> mfr_parent_map[n_mfr];\n",
     "    }\n",
     "    parameters {\n",
     "        vector[K] beta;                         // exog coeffs\n",
@@ -2924,17 +2926,15 @@
     "        \n",
     "                  \n",
     "        for (parent in 1:n_parent) {\n",
-    "              b0_parent[parent] ~ normal(parent_mu, parent_sd);         // n_parent x 1\n",
+    "              b0_parent[parent] ~ normal(parent_mu, parent_sd);\n",
     "        }\n",
     "\n",
     "        for (mfr in 1:n_mfr) {\n",
-    "            for (n in 1:N){\n",
-    "                b0_mfr[mfr] ~ normal(b0_parent[parent_enc[n]], mfr_sd);        // n_mfr x 1\n",
-    "            }\n",
+    "            b0_mfr[mfr] ~ normal(b0_parent[mfr_parent_map[mfr]], mfr_sd);\n",
     "        }      \n",
     "\n",
     "        sigma ~ cauchy(0, 10);\n",
-    "        y ~ student_t(1, b0_mfr[mfr_enc] + X * beta, sigma);            // N x 1\n",
+    "        y ~ student_t(1, b0_mfr[mfr_enc] + X * beta, sigma);\n",
     "    }\n",
     "    \n",
     "\"\"\""
@@ -2942,7 +2942,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 128,
+   "execution_count": 159,
    "metadata": {
     "collapsed": true
    },
@@ -2957,12 +2957,17 @@
     "mdl_hier_stan_dict['parent_enc'] = dfs['parent_enc'].values + 1\n",
     "mdl_hier_stan_dict['n_parent'] = n_parent\n",
     "mdl_hier_stan_dict['mfr_enc'] = dfs['mfr_enc'].values + 1\n",
-    "mdl_hier_stan_dict['n_mfr'] = n_mfr"
+    "mdl_hier_stan_dict['n_mfr'] = n_mfr\n",
+    "\n",
+    "mfr_parent_map = (dfs.groupby(['mfr_enc','parent_enc']).size()\n",
+    "                  .reset_index()['parent_enc'].values)\n",
+    "\n",
+    "mdl_hier_stan_dict['mfr_parent_map'] = mfr_parent_map + 1"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 129,
+   "execution_count": 160,
    "metadata": {
     "collapsed": false
    },
