WIP update to PYMC3 hier model

--- a/20_InitialDataAnalysis.ipynb
+++ b/20_InitialDataAnalysis.ipynb
@@ -1235,6 +1235,42 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Parent - Manufacturer Hierarchy"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Reminder of how the manufacturer ownership is structured: counts of cars (ows in the dataset) by manufacturer and parent group:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "f, ax1d = plt.subplots(1,1,figsize=(12,6))\n",
+    "ax = sns.heatmap(dfs.groupby(['mfr_owner','mfr']).size().unstack()\n",
+    "    ,annot=True, fmt='.0f', cbar=False, ax=ax1d, cmap='BuPu')"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
